<resources>
    <string name="app_name">FLOWISH</string>
    <string name="browse_all">Browse All</string>
    <string name="discover">Discover</string>
    <string name="city">City</string>
    <string name="click_to_start_trip">Click here to generate your best trip</string>
    <string name="see_more">See more</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="saved_trip">Saved Trips</string>
    <string name="profile">Profile</string>
</resources>